fixed overflow bug

--- a/sites/all/themes/custom/openscholar/openscholar.css
+++ b/sites/all/themes/custom/openscholar/openscholar.css
@@ -224,6 +224,7 @@ p.copy {
   top:0;
   bottom: 0;
   float: none;
+  overflow:auto;
   }
 
 #content-wrapper #content-main {
@@ -278,8 +279,8 @@ body.no-sidebars #content-main #content {
   }
 
 #content-main #content h2.title {
-  position:absolute;
-  top: -41px;
+  position:fixed;
+  top: 77px;
   left: 22px;
   color: #fff;
   font-size: 23px;
